--- a/20170514-listings/components/sass/_st_override.scss
+++ b/20170514-listings/components/sass/_st_override.scss
@@ -7,7 +7,7 @@
  }
 
 #map  {
-     height: 330px;
+     height: 400px;
      width: 100%;
  }
 
@@ -62,6 +62,11 @@
 
 #legendContainer {
   float:left;
+}
+
+.source {
+  color:#333;
+  font-size:0.8em;
 }
 
 .score {
@@ -148,7 +153,7 @@ h5 {
 @media only screen and (max-width:840px)  {
 
 #map {
-  height:200px;
+  height:400px;
 }
 
 #wrapper  {
