--- a/20170521-metcouncil/builds/production/css/style.css
+++ b/20170521-metcouncil/builds/production/css/style.css
@@ -2443,8 +2443,25 @@ body * {
   height: 500px;
 }
 
+.mapOther {
+  width: 800px;
+  position: absolute;
+  top: 0;
+  bottom: 700px;
+  height: 500px;
+}
+
 .blockSpace {
   height: 530px;
+}
+
+.source {
+  color: #bbbbbb !important;
+  margin-top: 10px;
+}
+
+.source a {
+  color: #000000 !important;
 }
 
 .mapboxgl-ctrl.mapboxgl-ctrl-attrib, .mapboxgl-ctrl-logo {
@@ -2499,88 +2516,13 @@ body * {
   width: 70px;
 }
 
-.onoffswitch {
-  float: right;
-  position: relative;
-  width: 187px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-}
-
-.onoffswitch-checkbox {
-  display: none;
-}
-
-.onoffswitch-label {
-  display: block;
-  overflow: hidden;
-  cursor: pointer;
-  border: 2px solid #999999;
-  border-radius: 20px;
-}
-
-.onoffswitch-inner {
-  display: block;
-  width: 200%;
-  margin-left: -100%;
-  transition: margin 0.3s ease-in 0s;
-}
-
-.onoffswitch-inner:before, .onoffswitch-inner:after {
-  display: block;
-  float: left;
-  width: 50%;
-  height: 30px;
-  padding: 0;
-  line-height: 30px;
-  font-size: 14px;
-  color: white;
-  font-family: Trebuchet, Arial, sans-serif;
-  font-weight: bold;
-  box-sizing: border-box;
-}
-
-.onoffswitch-inner:before {
-  content: "PRESENT";
-  padding-left: 10px;
-  background-color: #333333;
-  color: #FFFFFF;
-}
-
-.onoffswitch-inner:after {
-  content: "1966";
-  padding-right: 10px;
-  background-color: #EEEEEE;
-  color: #999999;
-  text-align: right;
-}
-
-.onoffswitch-switch {
-  display: block;
-  width: 28px;
-  margin: 1px;
-  background: #FFFFFF;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 153px;
-  border: 2px solid #999999;
-  border-radius: 20px;
-  transition: all 0.3s ease-in 0s;
-}
-
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-  margin-left: 0;
-}
-
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-  right: 0px;
-}
-
 .adjacent {
   width: 48%;
   display: inline-block;
+}
+
+.slide {
+  display: none;
 }
 
 .pct {
@@ -2595,12 +2537,43 @@ body * {
   color: #857AAA;
 }
 
+.topLabels {
+  padding: 20px;
+}
+
+.topLabels2 {
+  padding: 0;
+}
+
+.topLabels div, .topLabels2 div {
+  width: 48%;
+  display: inline-block;
+}
+
+.rightSide {
+  text-align: right;
+  font-weight: 900;
+}
+
+.leftSide {
+  text-align: left;
+  font-weight: 900;
+}
+
+#legendContainer {
+  margin-left: auto;
+  margin-right: auto;
+  width: 212px;
+  height: 30px;
+  text-align: center;
+}
+
 @media only screen and (max-width: 800px) {
   #wrapper {
     width: 100%;
   }
 
-  #map, .map {
+  #map, .map, .mapOther {
     width: 100%;
     height: 250px;
   }
