--- a/20170521-metcouncil/builds/production/css/style.css
+++ b/20170521-metcouncil/builds/production/css/style.css
@@ -2448,11 +2448,15 @@ body * {
   position: absolute;
   top: 0;
   bottom: 700px;
-  height: 500px;
+  height: 350px;
 }
 
 .blockSpace {
   height: 530px;
+}
+
+.blockSpaceOther {
+  height: 375px;
 }
 
 .source {
@@ -2573,13 +2577,18 @@ body * {
     width: 100%;
   }
 
-  #map, .map, .mapOther {
+  #map, .map {
     width: 100%;
     height: 250px;
   }
 
-  .blockSpace {
-    height: 275px;
+  .mapOther {
+    width: 100%;
+    height: 350px;
+  }
+
+  .blockSpaceOther {
+    height: 375px;
   }
 }
 @media only screen and (max-width: 700px) {
