--- a/20170521-metcouncil/builds/production/css/style.css
+++ b/20170521-metcouncil/builds/production/css/style.css
@@ -2587,6 +2587,10 @@ body * {
     height: 350px;
   }
 
+  .blockSpace {
+    height: 300px;
+  }
+
   .blockSpaceOther {
     height: 375px;
   }
