--- a/20170615-zebra/components/sass/_st_override.scss
+++ b/20170615-zebra/components/sass/_st_override.scss
@@ -247,6 +247,12 @@ p {
     cursor:pointer;
 }
 
+.name {
+    white-space: nowrap;
+    overflow-x:hidden;
+}
+.county { text-align:right; }
+
 @media (max-width:500px) {
     #map {
         position: static;
