--- a/20170615-zebra/components/css/style.css
+++ b/20170615-zebra/components/css/style.css
@@ -2159,9 +2159,14 @@ header[role="banner"] {
 body {
   margin: 0;
   padding: 0;
+  font-family: "Benton Sans", Helvetica, Arial, sans-serif;
 }
 
-#map, #mapLookip {
+.slide {
+  display: none;
+}
+
+#map, #mapLookup {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -2173,6 +2178,36 @@ body {
   bottom: 0;
   width: 100%;
   clear: both;
+}
+
+.chatter {
+  padding: 10px;
+}
+
+.mapboxgl-popup-close-button {
+  display: none !important;
+}
+
+.title {
+  font-weight: 900;
+  font-size: 1.4em;
+}
+
+#database {
+  position: absolute;
+  width: 400px;
+  top: 0;
+  left: 0;
+  padding: 10px;
+  z-index: 1;
+  background-color: #ffffff;
+}
+
+#listing {
+  height: 300px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%;
 }
 
 .map-overlay-container {
@@ -2278,13 +2313,6 @@ body {
   opacity: 0.8;
 }
 
-#listing {
-  height: 300px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  width: 100%;
-}
-
 .previous {
   float: left;
 }
@@ -2347,7 +2375,7 @@ small {
   display: block;
 }
 
-.chatter {
+.description {
   padding: 10px;
 }
 
@@ -2420,7 +2448,12 @@ p {
     height: 400px;
   }
 
-  .map-overlay-container {
+  #mapLookup {
+    position: static;
+    height: 350px;
+  }
+
+  .map-overlay-container, #database {
     width: 100%;
     position: static;
   }
