--- a/20170615-zebra/components/css/style.css
+++ b/20170615-zebra/components/css/style.css
@@ -2203,6 +2203,10 @@ body {
   background-color: #ffffff;
 }
 
+#stats {
+  padding: 10px;
+}
+
 #listing {
   height: 300px;
   overflow-x: hidden;
