--- a/20170615-zebra/components/sass/_st_override.scss
+++ b/20170615-zebra/components/sass/_st_override.scss
@@ -46,6 +46,10 @@ body {
     background-color:#ffffff;
 }
 
+#stats {
+    padding:10px;
+}
+
 #listing {
     height:300px;
     overflow-x:hidden;
