--- a/20170615-zebra/components/css/style.css
+++ b/20170615-zebra/components/css/style.css
@@ -2189,8 +2189,13 @@ body {
 }
 
 .title {
-  font-weight: 900;
-  font-size: 1.4em;
+  font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 120%;
+  color: #333;
+  margin: 0 0 5px 0;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 #database {
@@ -2198,7 +2203,7 @@ body {
   width: 400px;
   top: 0;
   left: 0;
-  padding: 10px;
+  padding-bottom: 10px;
   z-index: 1;
   background-color: #ffffff;
 }
@@ -2380,7 +2385,11 @@ small {
 }
 
 .description {
-  padding: 10px;
+  font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  line-height: 120%;
+  color: #333;
+  margin: 0 0 30px 0;
 }
 
 p {
