--- a/20170719-police_shootings/components/css/style.css
+++ b/20170719-police_shootings/components/css/style.css
@@ -2447,6 +2447,10 @@ h1.mobile-hedline {
     text-shadow: none;
   }
 
+  .readmore {
+    display: none !important;
+  }
+
   .featherlight .featherlight-content,
   .featherlight-content .card {
     background-color: #ffffff !important;
@@ -2553,7 +2557,7 @@ h1.mobile-hedline {
   }
 
   .yearLabel {
-    width: 4.55%;
+    width: 4.44%;
   }
 
   #mobileZoom {
@@ -2593,7 +2597,7 @@ h1.mobile-hedline {
   .card {
     padding: 20px;
     height: auto !important;
-    width: 32%;
+    width: 37%;
     display: block;
   }
 
