--- a/20170719-police_shootings/components/sass/_st_override.scss
+++ b/20170719-police_shootings/components/sass/_st_override.scss
@@ -716,7 +716,7 @@ h1.mobile-hedline {
         text-align: center;
     }
 }
-@media (max-width:605px) {
+@media (max-width:620px) {
     .article-headline {
         display: none;
     }
@@ -737,13 +737,14 @@ h1.mobile-hedline {
         z-index: 2;
         text-shadow: none;
     }
-    
+
     .readmore {
       display:none !important;
     }
     
     .featherlight .featherlight-content,
     .featherlight-content .card {
+        width: 75% !important;
         background-color: #ffffff !important;
         overflow-y: auto !important;
         overflow-x: hidden;
@@ -825,6 +826,14 @@ h1.mobile-hedline {
     #wrapper {
         text-align: left !important;
     }
+
+    .yearLabel {
+        width: 4.7%;
+        display: inline-block;
+        text-align: center;
+        font-size: 0.7em;
+        font-weight: 600;
+    }
     
     #clickyStuff {
         visibility: hidden;
@@ -878,7 +887,7 @@ h1.mobile-hedline {
     
     #chartLabels .yearLabel {
         font-size: 0.5em;
-        width: 4.6%;
+        width: 4.37%;
     }
     
     #filter input {
