--- a/20170615-zebra/components/sass/_st_override.scss
+++ b/20170615-zebra/components/sass/_st_override.scss
@@ -36,6 +36,10 @@ body {
     padding: 10px;
 }
 
+.lakename {
+    font-weight:900;
+}
+
 .mapboxgl-popup-close-button {
     display:none !important;
 }
