--- a/20170615-zebra/builds/development/css/style.css
+++ b/20170615-zebra/builds/development/css/style.css
@@ -766,7 +766,7 @@ a:hover {
   padding: 0 10px 0 10px;
   font-family: "Benton Sans", Helvetica, Arial, sans-serif !important;
   border-radius: 5px !important;
-  margin-bottom: 10px;
+  margin: 0;
   width: 100%;
   height: 30px;
   line-height: 120%;
@@ -2215,13 +2215,11 @@ body {
 #database {
   position: absolute;
   width: 400px;
-  top: 20px;
-  left: 20px;
-  padding: 10px;
+  top: 0;
+  left: 0;
+  padding-bottom: 10px;
   z-index: 1;
   background-color: #ffffff;
-  box-shadow: 5px 5px 20px #999;
-  border: .5px solid #dedede;
 }
 
 #stats {
@@ -2229,7 +2227,7 @@ body {
 }
 
 #listing {
-  height: 220px;
+  height: 600px;
   overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
@@ -2414,7 +2412,7 @@ small {
   font-size: 13px;
   line-height: 120%;
   color: #333;
-  margin: 0 0 20px 0;
+  margin: 0 0 30px 0;
 }
 
 p {
@@ -2478,6 +2476,27 @@ p {
 
 .county {
   text-align: right;
+}
+
+/* Textbox Changes */
+#database {
+  padding: 10px;
+  box-shadow: 5px 5px 20px #999;
+  top: 20px;
+  left: 20px;
+  border: 0.5px solid #dedede;
+}
+
+#filter input {
+  margin-bottom: 10px;
+}
+
+#listing {
+  height: 220px;
+}
+
+.description {
+  margin-bottom: 20px;
 }
 
 @media (max-width: 500px) {
