--- a/20170615-zebra/components/sass/_st_override.scss
+++ b/20170615-zebra/components/sass/_st_override.scss
@@ -318,6 +318,29 @@ p {
 }
 .county { text-align:right; }
 
+ /* Textbox Changes */
+
+#database {
+  padding: 10px;
+  box-shadow:5px 5px 20px#999;
+  top: 20px;
+  left: 20px;
+  border:.5px solid#dedede;
+}
+
+#filter input {
+    margin-bottom:10px;
+}
+
+#listing  {
+height: 220px;
+}
+
+.description  {
+  margin-bottom: 20px;
+}
+
+
 @media (max-width:500px) {
     #map {
         position: static;
