--- a/20170514-farmers_markets/components/css/style.css
+++ b/20170514-farmers_markets/components/css/style.css
@@ -2479,6 +2479,21 @@ body {
   width: 100% !important;
 }
 
+.byline a {
+  color: #888;
+}
+
+.byline {
+  line-height: 130%;
+  font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 0.6em;
+  color: #888;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: left;
+}
+
 #geocoder-container {
   margin-top: 10px;
   width: 100%;
