--- a/20170514-farmers_markets/components/sass/_st_override.scss
+++ b/20170514-farmers_markets/components/sass/_st_override.scss
@@ -175,6 +175,20 @@ body {
         }
     }
 }
+.byline a {
+    color: #888;
+}
+
+.byline {
+    line-height:130%;
+    font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    font-size:0.6em;
+    color: #888;
+    padding-top:10px;
+    padding-bottom:10px;
+    text-align:left;
+}
 #geocoder-container {
     margin-top: 10px;
     width: 100%;
