--- a/20170805-test_scores/builds/production/css/style.css
+++ b/20170805-test_scores/builds/production/css/style.css
@@ -1958,7 +1958,7 @@ p {
 }
 
 #chart {
-  height: 180px;
+  height: 200px;
 }
 
 .source {
@@ -2134,6 +2134,14 @@ li.district:hover {
 .headcell {
   display: inline-block;
   width: 33%;
+}
+
+.povCell {
+  padding: 12px;
+}
+
+.gray3 {
+  font-weight: normal !important;
 }
 
 .read {
