--- a/20170805-test_scores/components/sass/_st_override.scss
+++ b/20170805-test_scores/components/sass/_st_override.scss
@@ -7,8 +7,20 @@ p {
 }
 
 #chart .c3-line {
-    stroke-width: 6px !important;
+    stroke-width: 4px !important;
 }
+
+//#chart .c3-line {
+//    stroke-width: 6px !important;
+//}
+
+//#chart .c3-line {
+//    opacity:0 !important;
+//}
+
+//#chart .c3-area {
+//  opacity: 0.5 !important;
+//}
 
 p {
     text-align: left !important;
