--- a/20170805-test_scores/components/sass/_st_override.scss
+++ b/20170805-test_scores/components/sass/_st_override.scss
@@ -26,6 +26,10 @@ p {
     text-align: left !important;
 }
 
+#down {
+    display:none;
+}
+
 .chatter {
     line-height:160%;
     text-align:left;
