--- a/20170805-test_scores/builds/development/css/style.css
+++ b/20170805-test_scores/builds/development/css/style.css
@@ -1853,6 +1853,10 @@ p {
   text-align: left !important;
 }
 
+#down {
+  display: none;
+}
+
 .chatter {
   line-height: 160%;
   text-align: left;
