--- a/20170805-test_scores/builds/development/css/style.css
+++ b/20170805-test_scores/builds/development/css/style.css
@@ -2175,6 +2175,12 @@ li.district:hover {
     width: 100%;
   }
 }
+@media (max-width: 620px) {
+  .cell, .headcell {
+    display: inline-block;
+    width: 32%;
+  }
+}
 @media (max-width: 600px) {
   #districtSelect {
     font-weight: 900;
@@ -2184,7 +2190,7 @@ li.district:hover {
 
   .cell, .headcell {
     display: inline-block;
-    width: 32.7%;
+    width: 32%;
   }
 
   .mobileshow {
