--- a/20170805-test_scores/components/sass/_st_override.scss
+++ b/20170805-test_scores/components/sass/_st_override.scss
@@ -349,6 +349,13 @@ li.district:hover {
     }
 }
 
+@media (max-width:620px) {
+    .cell, .headcell {
+        display: inline-block;
+        width: 32%;
+    }
+}
+
 @media (max-width:600px) {
     #districtSelect {
         font-weight: 900;
@@ -357,7 +364,7 @@ li.district:hover {
     }
     .cell, .headcell {
         display: inline-block;
-        width: 32.7%;
+        width: 32%;
     }
     .mobileshow {
         display:block;
