--- a/20170830-school_flight/components/sass/style.scss
+++ b/20170830-school_flight/components/sass/style.scss
@@ -7,7 +7,7 @@
 // @import "compass/css3/box-shadow";
 
 // JH JS partials
-//@import "mapbox_gl";
+@import "mapbox_gl";
 //@import "mapbox_gl_geocoder";
 @import "c3";
 
