--- a/20170826-cabins/components/sass/style.scss
+++ b/20170826-cabins/components/sass/style.scss
@@ -18,7 +18,7 @@
 // @import "MarkerCluster.Default";
 // @import "MarkerCluster";
 // @import "jquery_ui";
-// @import "c3";
+@import "c3";
 
 //Core partials
 @import "st_fonts";
