--- a/20170828-airport_noise/components/sass/_st_override.scss
+++ b/20170828-airport_noise/components/sass/_st_override.scss
@@ -37,7 +37,7 @@ body {
     display:none !important;
 }
 
-.mapboxgl-ctrl-attrib, .mapboxgl-ctrl-compass {
+.mapboxgl-ctrl-attrib, .mapboxgl-ctrl-compass, .mapboxgl-ctrl-logo {
     display:none !important;
 }
 
