--- a/20170825-pipelines/builds/development/css/style.css
+++ b/20170825-pipelines/builds/development/css/style.css
@@ -2407,7 +2407,7 @@ header[role="banner"] {
   display: none !important;
 }
 
-.mapboxgl-ctrl-attrib, .mapboxgl-ctrl-compass {
+.mapboxgl-ctrl-attrib, .mapboxgl-ctrl-compass, .mapboxgl-ctrl-logo {
   display: none !important;
 }
 
