--- a/20170825-pipelines/components/sass/_st_override.scss
+++ b/20170825-pipelines/components/sass/_st_override.scss
@@ -26,7 +26,7 @@
     display:none !important;
 }
 
-.mapboxgl-ctrl-attrib, .mapboxgl-ctrl-compass {
+.mapboxgl-ctrl-attrib, .mapboxgl-ctrl-compass, .mapboxgl-ctrl-logo {
     display:none !important;
 }
 
