--- a/20170830-school_flight/components/css/style.css
+++ b/20170830-school_flight/components/css/style.css
@@ -2169,6 +2169,16 @@ header[role="banner"] {
   color: #fff;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
 body,
 #filter,
 #filter input:focus,
@@ -2361,7 +2371,6 @@ li.district {
   border: 1px solid #CACFD2;
   border-radius: 10px;
   width: 100%;
-  margin-top: 50px;
 }
 
 li.district:hover {
