--- a/20171022-bikelanes/components/sass/style.scss
+++ b/20171022-bikelanes/components/sass/style.scss
@@ -11,7 +11,7 @@
 // @import "rclick";
 
 // JH JS partials
-// @import "mapbox_gl";
+ @import "mapbox_gl";
 // @import "mapbox_gl_geocoder";
 // @import "mapbox_compare";
 // @import "mapbox_js";
@@ -27,4 +27,3 @@
 // @import "mixins";
 // @import "modules";
 @import "st_override";
- 
