--- a/20180109-mohamed/components/sass/_st_override.scss
+++ b/20180109-mohamed/components/sass/_st_override.scss
@@ -21,6 +21,22 @@ body,
     line-height:160%;
 }
 
+.c3-texts-Henry .c3-text-1, .c3-texts-Henry .c3-text-2, .c3-texts-Henry .c3-text-3 {
+    opacity:0 !important;
+}
+
+.c3-texts-Maverick .c3-text-0, .c3-texts-Maverick .c3-text-2, .c3-texts-Maverick .c3-text-3 {
+    opacity:0 !important;
+}
+
+.c3-texts-Mohamed .c3-text-0, .c3-texts-Mohamed .c3-text-1, .c3-texts-Mohamed .c3-text-3 {
+    opacity:0 !important;
+}
+
+.c3-texts-Xavier .c3-text-1, .c3-texts-Xavier .c3-text-1, .c3-texts-Xavier .c3-text-2 {
+    opacity:0 !important;
+}
+
 .legendary {
     padding:4px;
     color: #fff;
