--- a/20180118-vikings_bars/styles/_project.scss
+++ b/20180118-vikings_bars/styles/_project.scss
@@ -135,6 +135,7 @@ footer {
 }
 
 #infobox {
+    display:none;
     font-family: "Benton Sans Condensed Medium", Helvetica, Arial, sans-serif;
     margin:10px;
     padding:10px;
