--- a/20180118-vikings_bars/styles/_project.scss
+++ b/20180118-vikings_bars/styles/_project.scss
@@ -124,6 +124,12 @@ footer {
   text-align:center;
 }
 
+.thisSwitch {
+  display:inline-block;
+  width:48%;
+  font-size:1.3em;
+}
+
 .zoom {
     font-family: "Benton Sans Condensed Medium", Helvetica, Arial, sans-serif;
     bottom: 1px;
