--- a/20180118-vikings_bars/styles/_project.scss
+++ b/20180118-vikings_bars/styles/_project.scss
@@ -130,6 +130,10 @@ footer {
   font-size:1.3em;
 }
 
+.thisone {
+  font-size:1.3em;
+}
+
 .zoom {
     font-family: "Benton Sans Condensed Medium", Helvetica, Arial, sans-serif;
     bottom: 1px;
