--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -9,7 +9,7 @@ body {
  }
 
 #map  {
-     height: 330px;
+     height: 350px;
      width: 100%;
  }
 
@@ -17,13 +17,21 @@ body {
      display: none !important;
  }
 
+ .mapboxgl-canvas {
+  position:static !important;
+ }
+
 #listing  {
      float: left;
      width: 30%;
 }
 
+#filter {
+  margin-bottom:10px;
+}
+
 #cities {
-     height:335px;
+     height:435px;
      overflow-y:auto;
 }
 
