--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -1,7 +1,8 @@
 /* PROJECT STYLES */
-body {
-  font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+body, .chatter, .chartTitle, #wrapper, * {
+  font-family: "Benton Sans Condensed Medium",Helvetica,Arial,sans-serif !important;
 }
+
 #wrapper  {
      width: 850px;
      margin-left:auto;
@@ -13,6 +14,14 @@ body {
      width: 100%;
  }
 
+ #chartMarket {
+      height:350px;
+ }
+
+ #chartHighlights {
+      height:400px;
+ }
+
 .mapboxgl-ctrl-attrib  {
      display: none !important;
  }
@@ -20,6 +29,10 @@ body {
  .mapboxgl-canvas {
   position:static !important;
  }
+
+.chatter {
+  line-height:140%;
+}
 
 #listing  {
      float: left;
