--- a/20180212-housing/components/css/style.css
+++ b/20180212-housing/components/css/style.css
@@ -2353,6 +2353,8 @@ header[role="banner"] {
 /* PROJECT STYLES */
 body, .chatter, .chartTitle, #wrapper, * {
   font-family: "Benton Sans Condensed Medium",Helvetica,Arial,sans-serif !important;
+  -webkit-font-smoothing: antialiased;
+  letter-spacing: normal;
 }
 
 #wrapper {
@@ -2366,12 +2368,13 @@ body, .chatter, .chartTitle, #wrapper, * {
   width: 100%;
 }
 
-#chartMarket {
-  height: 350px;
+.chartTitle {
+  font-size: 1.5em;
+  font-weight: 900;
 }
 
-#chartHighlights {
-  height: 400px;
+#chartMarket {
+  height: 350px;
 }
 
 .mapboxgl-ctrl-attrib {
@@ -2384,6 +2387,7 @@ body, .chatter, .chartTitle, #wrapper, * {
 
 .chatter {
   line-height: 140%;
+  font-size: 16px;
 }
 
 #listing {
@@ -2404,24 +2408,19 @@ body, .chatter, .chartTitle, #wrapper, * {
   padding: 7px;
   color: #fff;
   border-radius: 5px;
+  font-weight: bold;
   padding: 0 7px;
   margin-bottom: 3px;
   display: inline-block;
 }
 
-.gray3 {
-  font-weight: normal !important;
-}
-
 .byline {
-  font-family: "Benton Sans", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  font-size: 0.7em;
-  color: #888;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: left;
-  line-height: 140%;
+  font-family: Benton Sans,Helvetica,Arial,sans-serif;
+  line-height: 1.4em;
+  letter-spacing: normal;
+  font-weight: normal;
+  margin: 0 0 1rem;
+  font-size: .85em;
 }
 
 #reference {
