--- a/20180212-housing/components/css/style.css
+++ b/20180212-housing/components/css/style.css
@@ -2484,6 +2484,11 @@ body, .chatter, .chartTitle, #wrapper, * {
   cursor: pointer;
 }
 
+.stretch:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
 .th, .th2 {
   padding: 1px;
   font-weight: 900;
