--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -133,6 +133,11 @@ body, .chatter, .chartTitle, #wrapper, * {
   cursor:pointer;
 }
 
+.stretch:hover {
+  opacity:0.5;
+  cursor:pointer;
+}
+
 .th, .th2 { 
   padding:1px; 
   font-weight:900;
