--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -66,7 +66,28 @@ body, .chatter, .chartTitle, #wrapper, * {
  }
 
  .orange5 .value {
- color:#ffffff !important;
+    color:#ffffff !important;
+ }
+
+ .orange5 {
+    background-color:#993404;
+ }
+
+ .orange4 {
+    background-color:#d95f0e;
+ }
+
+  .orange3 {
+    background-color:#fe9929;
+ }
+
+  .orange2 {
+    background-color:#fec44f;
+ }
+
+
+ .orange1 {
+    background-color:#fee391;
  }
 
 .mapboxgl-ctrl-attrib  {
