--- a/20180212-housing/builds/development/css/style.css
+++ b/20180212-housing/builds/development/css/style.css
@@ -2420,6 +2420,26 @@ body, .chatter, .chartTitle, #wrapper, * {
   color: #ffffff !important;
 }
 
+.orange5 {
+  background-color: #993404;
+}
+
+.orange4 {
+  background-color: #d95f0e;
+}
+
+.orange3 {
+  background-color: #fe9929;
+}
+
+.orange2 {
+  background-color: #fec44f;
+}
+
+.orange1 {
+  background-color: #fee391;
+}
+
 .mapboxgl-ctrl-attrib {
   display: none !important;
 }
