--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -21,9 +21,12 @@ body, .chatter, .chartTitle, #wrapper, * {
   display:none;
 }
 
+.hideme {
+  display:none !important;
+}
 
  .cell {
-     width:8%;
+     width:15%;
      display:inline-block;
      vertical-align:top;
      line-height:120%;
@@ -61,7 +64,7 @@ body, .chatter, .chartTitle, #wrapper, * {
 }
 
  #chartMarket {
-      height:350px;
+      height:400px;
       pointer-events:none !important;
  }
 
@@ -364,7 +367,7 @@ h5 {
 @media only screen and (max-width:500px)  {
 
 .cell, .th {
-    width: 15%;
+    width: 14%;
     font-size: 0.7em;
     display: inline-block;
     vertical-align: top;
@@ -384,7 +387,7 @@ h5 {
 }
 
 .stretch {
-     width:20%;
+     width:24%;
      display:inline-block;
      text-align:left;
  }
