--- a/20180212-housing/components/sass/_st_override.scss
+++ b/20180212-housing/components/sass/_st_override.scss
@@ -16,6 +16,10 @@ body, .chatter, .chartTitle, #wrapper, * {
      width: 100%;
  }
 
+ .name, .score {
+    pointer-events:none !important;
+ }
+
 .value {
   font-weight:normal !important;
   display:none;
