--- a/20180212-housing/builds/development/css/style.css
+++ b/20180212-housing/builds/development/css/style.css
@@ -2368,6 +2368,10 @@ body, .chatter, .chartTitle, #wrapper, * {
   width: 100%;
 }
 
+.name, .score {
+  pointer-events: none !important;
+}
+
 .value {
   font-weight: normal !important;
   display: none;
